# depx

./: .gitignore  Cargo.toml  Justfile  README.md
src/: duplicates.rs  main.rs  types.rs
src/analyzer/: extractor.rs  mod.rs
src/graph/: mod.rs
src/lockfile/: cargo.rs  mod.rs  npm.rs
src/reporter/: mod.rs
src/vulnerability/: mod.rs
test_suite/npm_duplicates/: package.json
